2010-04-13  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #13788: [felogin] Redirects use incorrect function parameters
	* Updated manual of felogin (thanks to Jigal van Hemert and Jeff Segars)
	* Reverted Update #14063: Updated ExtJs library from 3.1.1 to 3.2 Final

2010-04-12  Jeff Segars  <jeff@webempoweredchurch.org>

	* Added feature #14065: Add hook for including Static TypoScript after all Static Templates are included

2010-04-12  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #13116: htmlArea RTE: Allow to hide counting classes
	* Fixed bug #13674: htmlArea RTE: Incorrect position of cursor after SHIFT-ENTER in WebKit browser

2010-04-12  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #9851: LICENSE.txt refers to wrong webpage on typo3.com

2010-04-12  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #13710: Flashmessages in t3lib_fullsearch (Thanks to Georg Ringer)
	* Added feature #13508: Use exec_TRUNCATEquery() instead of DELETE FROM throughout the core
	* Fixed bug #13945: Missing key on l18n_parent in tt_content table

2010-04-12  Benjamin Mack  <benni@typo3.org>

	* Added Feature #12066: Added constants throughout the core for LF, CR, TAB (Thanks to Oliver Klee)

2010-04-12  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #14054: CSS Styled Content has no manual

2010-04-12  Patrick Broens  <patrick@patrickbroens.nl>

	* Fixed bug #14069: New install tool refactoring uses FE layer for templating instead of t3lib_parsehtml
	* Fixed bug #14070: require_once to class.tslib_content.php in sysext/install/mod/class.tx_install.php should be deleted 
	* Fixed bug #14071: Convert some characters in copyright of the stand alone install tool to XHTML character entities 

2010-04-11  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14062: Text Content element crashes (thanks to Jigal van Hemert)
	* Fixed bug #10629: class and title parameters of typolinks get broken